--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "vitest.config.ts", "vitest.setup.ts", "**/*.test.ts", "**/*.test.tsx", "**/__tests__/**"]
 }
 
 
