--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-markdown": "^10.1.0",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
