エラーを解消

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "node scripts/generate-articles.js && next dev",
     "build": "node scripts/generate-articles.js && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
@@ -24,15 +27,20 @@
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.0",
     "critters": "^0.0.23",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0",
+    "jsdom": "^27.2.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "vitest": "^4.0.14"
   }
 }
